--- a/style.css
+++ b/style.css
@@ -1,14 +1,15 @@
 body {
     font-family: "Titillium Web", "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     font-weight: 300;
-    font-size: 30px;
+    font-size: 17px;
     margin-left: auto;
     margin-right: auto;
     width: 980px;
 }
 h1 {
-    font-weight:400;
+    font-weight:700;
     line-height: 1.15em;
+    font-size: 2em;
 }
 
 h2 {
