--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h4 {
     font-size: 1.3em;
     font-weight: 400;
     margin: 10px 0px 4px 0px;
+    color: #1367a7;
 }
 .paper-title {
     padding: 16px 0px 16px 0px;
