--- a/style.css
+++ b/style.css
@@ -44,6 +44,11 @@ h4 {
     font-weight: 400;
     margin: 10px 0px 4px 0px;
 }
+h5 {
+    text-align: left;
+    font-size: 1.0em;
+    font-weight: 200;
+}
 .paper-title {
     padding: 16px 0px 16px 0px;
 }
